syntax = "proto3";

package protocol;

import "core.proto";
import "metadata.proto";

message CreateUserRequest {
  string device_id = 1;
  string name = 2;
}

message CreateUserResponse {
  Metadata metadata = 1;
}

message CreateSessionRequest {
  string device_id = 1;
}

message CreateSessionResponse {
  Metadata metadata = 1;
  string session_token = 2;
}

message LoginRequest {
  string session_token = 1;
}

message LoginResponse {
  Metadata metadata = 1;
  UserId user_id = 2;
}

service Auth {
  rpc CreateUser(CreateUserRequest) returns (CreateUserResponse);
  rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
  rpc Login(LoginRequest) returns (LoginResponse);
}
